[package]
name = "dynamic-hls-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros", "form", "http1", "json", "matched-path", "original-uri", "query", "tokio", "tower-log"] }
axum-prometheus = "0.6"
bytes = "1.6.0"
clap.workspace = true
hyper = { version = "1.2", features = ["full"] }
lazy_static = "1.4"
mp4 = "0.14"
mpeg2ts = "0.3.1"
serde.workspace = true
serde_json.workspace = true
sha256 = "1"
shadow-rs.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.5", features = ["trace", "compression-br", "propagate-header", "sensitive-headers", "cors", "fs"] }
tracing-subscriber.workspace = true
tracing.workspace = true

[build-dependencies]
shadow-rs.workspace = true